18_Ingress/04. External Access/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: your-load-balancer-domain-name
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port: 
              number: 8080
        path: /my-app
        pathType: Exact
